--- a/securegroups/templates/smartgroups/filter_list.html
+++ b/securegroups/templates/smartgroups/filter_list.html
@@ -1,5 +1,6 @@
 {% load i18n %}
-<table class="table table-aa">
+
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>{% translate 'Requirements' %}</th>
@@ -13,7 +14,17 @@
             <tr>
                 <td>{{ filter.name }}</td>
                 <td class="text-center">{{ filter.message|safe }}</td>
-                <td>{% if filter.check %}<a class="pull-right btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="pull-right btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
+                <td>
+                    {% if filter.check %}
+                        <a class="pull-right btn btn-success" type="button">
+                            <i class="fas fa-check-circle"></i>
+                        </a>
+                    {% else %}
+                        <a class="pull-right btn btn-danger" type="button">
+                            <i class="fas fa-times-circle"></i>
+                        </a>
+                    {% endif %}
+                </td>
             </tr>
         {% endfor %}
     </tbody>
