--- a/securegroups/templates/smartgroups/filter_list.html
+++ b/securegroups/templates/smartgroups/filter_list.html
@@ -17,11 +17,11 @@
                 <td>
                     {% if filter.check %}
                         <a class="pull-right btn btn-success" type="button">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fa-solid fa-check-circle"></i>
                         </a>
                     {% else %}
                         <a class="pull-right btn btn-danger" type="button">
-                            <i class="fas fa-times-circle"></i>
+                            <i class="fa-solid fa-times-circle"></i>
                         </a>
                     {% endif %}
                 </td>
