--- a/securegroups/templates/smartgroups/user_check.html
+++ b/securegroups/templates/smartgroups/user_check.html
@@ -21,11 +21,11 @@
                 <td class="text-end">
                     {% if filter.check %}
                         <a class="btn btn-success" type="button">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fa-solid fa-check-circle"></i>
                         </a>
                     {% else %}
                         <a class="text-end btn btn-danger" type="button">
-                            <i class="fas fa-times-circle"></i>
+                            <i class="fa-solid fa-times-circle"></i>
                         </a>
                     {% endif %}
                 </td>
